--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "github-release-manager",
-  "version": "1.0.5",
+  "version": "1.1.0",
   "description": "Creates and downloads github releases",
   "main": "create-release.js",
   "scripts": {
@@ -14,6 +14,7 @@
   "author": "Nate McDowell",
   "license": "ISC",
   "devDependencies": {
-    "request": "2.83.0"
+    "request": "2.83.0",
+    "lodash": "latest"
   }
 }
